<resources>
    <string name="app_name">Happy Places</string>
    <string name="cd_fab_add_place">TODO</string>
    <string name="label_input_title">Title</string>
    <string name="label_input_description">Description</string>
    <string name="label_input_date">Date</string>
    <string name="label_input_location">Location</string>
    <string name="label_add_image">Add image</string>
    <string name="cd_place_image">Image of the place you want to add.</string>
    <string name="label_save">Save</string>
    <string name="error_required_field">Required field!</string>
    <string name="fmt_date">dd/MM/yyyy</string>
    <string name="title_picture_dialog">Select Action</string>
    <string name="lbl_add_from_gallery">Select from gallery</string>
    <string name="lbl_add_from_camera">Capture with camera</string>
    <string name="rationale_storage_camera">Permission to local storage and camera are needed to save pictures.</string>
    <string name="take_photo">Take photo</string>
    <string name="cd_picture_button">Icon of a camera</string>
    <string name="title_places">Happy Places</string>
    <string name="lbl_no_items_places">No Happy Places in database</string>
    <string name="title_delete_record">Delete Record?</string>
    <string name="lbl_yes">yes</string>
    <string name="toast_delete_confirmed">Place deleted</string>
    <string name="lbl_no">no</string>
    <string name="btn_update">update</string>
    <string name="lbl_show_on_map">Show on map</string>
    <string name="add_current_location">Add current location</string>
</resources>