<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddPlaceActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/label_input_title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        android:hint="@string/label_input_description">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        android:hint="@string/label_input_date">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@id/til_date"
        android:hint="@string/label_input_location">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_location"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        android:background="@drawable/iv_background"
        android:src="@drawable/ic_baseline_image_placeholder_24"
        android:contentDescription="@string/cd_place_image" />
    <TextView
        android:id="@+id/tv_button_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_location"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintStart_toEndOf="@id/iv_image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/text_button_size"
        android:textAllCaps="true"
        android:text="@string/label_add_image"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_base"
        android:textAllCaps="true"
        android:textSize="@dimen/text_button_size"
        android:text="@string/label_save" />
</androidx.constraintlayout.widget.ConstraintLayout>